--- a/test/Testris.Specs/Testris.Specs.csproj
+++ b/test/Testris.Specs/Testris.Specs.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Tetris.Kubisme\Tetris.Kubisme.csproj" />
     <ProjectReference Include="..\..\src\Tetris\Tetris.csproj" />
   </ItemGroup>
 
