--- a/.github/workflows/buid-test.yml
+++ b/.github/workflows/buid-test.yml
@@ -9,10 +9,11 @@ jobs:
  
     steps:
     - uses: actions/checkout@v1
-    - name: Setup .NET Core
+    - name: Setup .NET 7.0
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.101
+        dotnet-version: '7.0.x'
+        include-prerelease: true
     - name: Build with dotnet
       run: dotnet build --configuration Release
     - name: Run unit tests
